--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node src/index.js",
     "dev": "nodemon src/index.js --exec babel-node",
-    "build": "babel src --out-dir build"
+    "build": "babel src --out-dir public"
   },
   "author": "It-Solutions",
   "license": "ISC",
